conflit entre amincontroller et client controller

--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -310,7 +310,7 @@ a.nav6:link, a.nav6:visited {
 	margin: 0 14px 0 14px;
 	height: 50px;
 	text-decoration: none;
-	background: url(images/contact-new.png) no-repeat left;
+	background: url(images/compte.png) no-repeat left;
 	color: #676d77;
 }
 
