--- a/src/main/webapp/resources/style_form.css
+++ b/src/main/webapp/resources/style_form.css
@@ -1,30 +1,5 @@
-/**
- * 01/28/2016
- * This pen is years old, and watching at the code after all
- * those years made me fall from my chair, so I:
- * - changed all IDs to classes
- * - converted all units to pixels and em units
- * - changed all global elements to classes or children of
- *   .login
- * - cleaned the syntax to be more consistent
- * - added a lot of spaces that I so hard tried to avoid
- *   a few years ago
- *   (because it's cool to not use them)
- * - and probably something else that I can't remember anymore
- *
- * I sticked to the same philosophy, meaning:
- * - the design is almost the same
- * - only pure HTML and CSS
- * - no frameworks, preprocessors or resets
- */
 
-/* 'Open Sans' font from Google Fonts */
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
-
-body {
-  background: #456;
-  font-family: 'Open Sans', sans-serif;
-}
 
 .login {
   width: 400px;
@@ -77,19 +52,15 @@ body {
   padding: 16px;
   outline: 0;
   font-family: inherit;
-  font-size: 0.95em;
-}
-
-.login input[type="email"],
-.login input[type="password"] {
+  font-size: 1em;
+  font-weight:bold;
   background: #fff;
-  border-color: #bbb;
-  color: #555;
+  border-color: #c0c0c0;
+  color: #000000;
 }
 
 /* Text fields' focus effect */
-.login input[type="email"]:focus,
-.login input[type="password"]:focus {
+.login input:focus {
   border-color: #888;
 }
 
@@ -101,7 +72,7 @@ body {
 }
 
 .login input[type="submit"]:hover {
-  background: #17c;
+  background: #0000ff;
 }
 
 /* Buttons' focus effect */
