--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -834,3 +834,11 @@ a.contact {
 	color: #666666;
 	padding: 10px 0 0 60px;
 }
+table
+{
+    border-collapse: collapse; /* Les bordures du tableau seront collées (plus joli) */
+}
+td ,th
+{
+    border: 1px solid black;
+}
